--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+h1{
+    text-align: center;
+    font-family: 'Microsoft Yahei';
+    color:blueviolet;
+    font-size: 36px;
+}
 h2{
     color:#2e80f2;
     font-family: 'Microsoft Yahei';
-    font-size: 26px;
+    font-size: 22px;
     font-weight: bold;
 }
 
